idea changes for migration